--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "amado-master",
   "version": "1.0.0",
   "description": "",
+  "homepage": "https://luantrongnguyen.github.io/monails",
   "main": "index.js",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "deploy": "gh-pages -d dist",
+    "predeploy": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -28,6 +31,7 @@
     "@types/jquery": "^3.5.33",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.1.0",
+    "gh-pages": "^6.3.0",
     "react-router-dom": "^7.9.4",
     "sass": "^1.93.2",
     "ts-node": "^10.9.2",
